src/_styles.css
/* ... */
.yep ~ .yep {
  text-decoration: none;
}


/* === SECTION : FONT TEST DRIVE === */

#test-drive {
  background: #fff;
  padding-bottom: 3rem;
}

#test-drive .ui {
  list-style: none;
  padding: 0;
}

#test-drive .ui summary::-webkit-details-marker {
  display: none;
}

#test-drive .ui summary {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding: 1rem;
  gap: 0.75rem;
}

#test-drive .ui button {
  appearance: none;
  flex: 1 auto;
  background: transparent;
  color: #ccc;
  font-size: 1.125rem;
  line-height: 1.1;
  min-height: 1.5rem;
  border: 2px solid rgba(255,255,255, 0.2);
  border-radius: 4px;
  padding: 0.5rem;
  margin: 0;
  vertical-align: top;
  cursor: pointer;
  position: relative;
}

#test-drive button:active {
 top: 1px; 
}

#test-drive button[data-on="true"] {
  border: 2px solid rgba(255,255,255, 1);
  color: #fff;
}


#test-drive article {
  font-size: 1.125rem;
  line-height: 1.7777778;
  max-width: 47rem;
  margin: 2rem auto;
  padding: 1rem;
}

#test-drive article .title {
  display: block;
  font-size: 2.5rem;
  margin: 4rem auto;
  max-width: 32rem;
  line-height: 1.1;
  text-align: center;
  font-weight: 200;
}

#test-drive article .chaper {
  display: block;
  font-size: 1rem;
  line-height: 1;
  text-align: center;
  text-transform: uppercase;
  letter-spacing: 1px;
  font-weight: 500;
}

#test-drive article .chaper-name {
  display: block;
  margin: 1rem 0 2rem;
  font-size: 1.75rem;
  line-height: 1.1;
  text-align: center;
  font-weight: 600;
}

#test-drive article p:first-of-type::first-letter {
  font-size: 225%;
  line-height: 1;
  margin-right: 0.1rem;
}


/* === FONT STACKS === */

.system {
  font-family: system-ui, sans-serif;
}

.transitional {
  font-family: Charter, 'Bitstream Charter', 'Sitka Text', Cambria, serif;
}

.old-style {
  font-family: 'Iowan Old Style', 'Palatino Linotype', 'URW Palladio L', serif;
}

.humanist {
  font-family: Seravek, 'Gill Sans Nova', Cantarell, Ubuntu, Calibri, 'Noto Sans', sans-serif;
}

.geometric-humanist {
  font-family: 'Avenir Next', 'Avenir Next LT Pro', Montserrat, Corbel, 'Source Sans Pro', sans-serif;
}

.classical-humanist {
  font-family: Optima, Candara, 'Noto Sans', sans-serif;
}

.neo-grotesque {
  font-family: Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif;
}

@font-face {
    font-family: 'Rockwell';
    src: local('Rockwell');
    ascent-override: 100%;
}

.geometric-slab-serif {
  font-family: 'Rockwell Nova', Rockwell, sans-serif;
}

.monospace-slab-serif {
  font-family: 'Courier New', 'Nimbus Mono PS', 'Cutive Mono', monospace;
  -webkit-font-smoothing: auto;
  -moz-osx-font-smoothing: auto;
}

.monospace-code {
  font-family: 'Cascadia Code', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
}

.industrial-semibold {
  font-family: Bahnschrift, 'DIN Alternate', 'Franklin Gothic Medium', 'Roboto Condensed', sans-serif;
}

.rounded-sans {
  font-family: ui-rounded, 'Hiragino Maru Gothic ProN', Quicksand, 'Arial Rounded MT Bold', Calibri, MotoyaLMaru, sans-serif;
}

.slab-serif {
  font-family: Superclarendon, 'Bookman Old Style', 'Sitka Heading', 'URW Bookman', 'URW Bookman L', 'Georgia Pro', Georgia, serif;
}

.didone {
  font-family: 'Didot', 'Bodoni MT', 'URW Palladio L', Sylfaen, serif;
  -webkit-font-smoothing: auto;
  -moz-osx-font-smoothing: auto;
}

.handwritten {
  font-family: 'Segoe Print', 'Bradley Hand', 'Coming Soon', cursive;
}

/* === ABOUT === */

#about {
  padding: 2rem 1rem;
  min-height: 20rem;
  background: #000;
  color: #fff;
}

#about .messaging {
  width: 100%;
  max-width: 48rem;
  margin: 0 auto;
  text-align: center;
}


/* === DESKTOP STYLES === */

@media (min-width: 42rem) {
  
  #menu details {
    position: fixed;
  }
  
  .ui {
    min-height: 4.5rem
  }
  
  #preview-text {
    padding: 0.75rem;
    margin-left: 1rem;
    align-self: center;
    border: 2px solid #404040;
  }

  #fonts {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(22rem, 1fr));
    gap: 0 1.5rem;
    padding: 3rem 1.5rem 4rem;
  }
  
  #test-drive .ui {
    padding: 0.25rem 0;
    max-width: 80rem;
  }
  
  #test-drive article {
    font-size: 1.25rem;
  }
  
  #test-drive article .title {
    font-size: 3rem;
  }
  
  #test-drive article .chaper-name {
    font-size: 2rem;
  }
  
}


/* === MOBILE STYLES === */

@media (max-width: 42rem) {

  #test-drive .ui button {
    display: none;
  }
  
  #test-drive button[data-on="true"] {
    display: block !important;
    pointer-events: none;
  }
  
  #test-drive button[data-on="true"]:after {
    content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='%23fff' width='24' height='24'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M8.25 15L12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9' /%3E%3C/svg%3E%0A");
    position: absolute;
    right: 6px;
    top: 6px;
  }
  
  #test-drive .ui[open] button {
    display: block;
  }
  
  #test-drive .ui[open] button[data-on="true"]:after {
    content: none;
  }
}

/* === TOUCH ONLY STYLES === */

@media (pointer: coarse) {
  
  .ui div input::-webkit-slider-thumb {
    width: 0.25rem;
    height: 2.75rem;
    background: linear-gradient(90deg, #fff0 0%, #fff0 47%, #fff 47%, #fff 53%, #fff0 53%, #fff0 100%);
    transform: scaleX(12);
    box-shadow: none;
    border-top: 0.75rem solid #000;
    border-bottom: 0.75rem solid #000;
  }
  
  .ui div input::-moz-range-thumb {
    width: 0.25rem;
    height: 2.75rem;
    background: linear-gradient(90deg, #fff0 0%, #fff0 47%, #fff 47%, #fff 53%, #fff0 53%, #fff0 100%);
    transform: scaleX(12);
    box-shadow: none;
    border-top: 0.75rem solid #000;
    border-bottom: 0.75rem solid #000;
  }
  
}

